--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-DATABASE_KEY=postgresql://dbname_oici_user:t6riKWrMWQiEwmG5ID9hnZMWNxfZcpKs@dpg-d1gohn2li9vc73auk1u0-a.oregon-postgres.render.com/dbname_oici
+HOST=dpg-d1gohn2li9vc73auk1u0-a.oregon-postgres.render.com
+PORT=5432
+DATABASE=dbname_oici
+USER=dbname_oici_user
+PASSWORD=t6riKWrMWQiEwmG5ID9hnZMWNxfZcpKs
+
