--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,46 @@
             "username": "dbname_oici_user",
             "database": "dbname_oici",
             "name": "dpg-d1gohn2li9vc73auk1u0-a"
+        },
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "Render PostgreSQL",
+            "socketPath": "dpg-d1gohn2li9vc73auk1u0-a.oregon-postgres.render.com",
+            "database": "dbname_oici",
+            "username": "dbname_oici_user",
+            "password": "t6riKWrMWQiEwmG5ID9hnZMWNxfZcpKs"
+        },
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "PostgreSQL Local",
+            "database": "proj_vendas",
+            "username": "postgres"
+        },
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "name": "PostgresLocal",
+            "database": "postgres",
+            "username": "postgres",
+            "password": "minhaSenhaSegura123"
+        },
+        {
+            "previewLimit": 50,
+            "server": "localhost",
+            "port": 5432,
+            "driver": "PostgreSQL",
+            "password": "t6riKWrMWQiEwmG5ID9hnZMWNxfZcpKs",
+            "database": "dbname_oici",
+            "username": "dbname_oici_user",
+            "name": "postgres"
         }
     ]
 }
