--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,8 @@ dependencies = [
     "xlrd (>=2.0.2,<3.0.0)",
     "sqlalchemy (>=2.0.41,<3.0.0)",
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "snowflake-sqlalchemy (>=1.7.5,<2.0.0)",
-    "snowflake-connector-python (>=3.15.0,<4.0.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "ipykernel (>=6.29.5,<7.0.0)"
 ]
 
 
